RESOLVED FIXED274244
[WebGPU] Invalidate all command buffers on submit, regardless of it the submit call succeeds
https://bugs.webkit.org/show_bug.cgi?id=274244
Summary [WebGPU] Invalidate all command buffers on submit, regardless of it the submi...
Mike Wyrzykowski
Reported 2024-05-15 22:38:53 PDT
[WebGPU] Invalidate all command buffers on submit, regardless of it the submit call succeeds See https://github.com/gpuweb/gpuweb/issues/4599
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-15 22:39:07 PDT
Mike Wyrzykowski
Comment 2 2024-05-21 10:23:10 PDT
Mike Wyrzykowski
Comment 3 2024-05-22 11:09:21 PDT
Mike Wyrzykowski
Comment 4 2024-05-22 22:36:35 PDT
Mike Wyrzykowski
Comment 5 2024-05-23 14:19:57 PDT
Mike Wyrzykowski
Comment 6 2024-05-23 14:21:05 PDT
*** Bug 274611 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.