[WebGPU] Invalidate all command buffers on submit, regardless of it the submit call succeeds https://bugs.webkit.org/show_bug.cgi?id=274244> <radar://128177642>

Reviewed by Dan Glastonbury.

Invalidate all command buffers passed to GPUQueue.submit, regardless
of whether or not they get committed.

Fixes the test being added in https://github.com/gpuweb/cts/pull/3716

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::invalidateCommandBuffers):
(WebGPU::Queue::submit):

Canonical link: https://commits.webkit.org/279084@main